@@ -36,7 +36,7 @@
                 </domain>
             </translation-domains>
             <documents>
-                <document>
+                <document base="epiphany">
         	  <directory>help</directory>
         	  <_description>User Guide</_description>
                 </document>
