@@ -1,5 +1,6 @@
 2006-03-05  Danilo Šegan  <danilo@gnome.org>
 
+	* defaults.py (documents): 
 	* update-stats.py (Statistics.doc_l10n_stats)
 	(Statistics.__init__): Sync with modules.py changes.
 
